<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="10dp"
    tools:context=".loginActivity"
    android:background="@drawable/background">

    <!-- Your existing layout components -->

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:src="@drawable/icon"
        android:contentDescription="@string/image_description" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/app_name"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#ffffff" />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="24dp"
            android:background="@drawable/login_card">
            <Spinner
                android:id="@+id/spinner"
                android:background="@drawable/spinner_border"
                android:textColor="#2B2727"
                android:textColorHint="#857E7E"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                tools:layout_editor_absoluteX="8dp"
                android:layout_marginTop="20dp" />

            <com.google.android.material.textfield.TextInputLayout
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/userid_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="#FfFfFf"
                android:layout_marginTop="15dp"
                android:outlineAmbientShadowColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:padding="12dp"
                    android:ems="10"
                    android:drawableStart="@drawable/baseline_person_24"
                    android:drawablePadding="8dp"
                    android:hint="@string/userid_hint"
                    android:textStyle="bold"
                    android:textColor="#2B2727"
                    android:textColorHint="@color/black"
                    android:inputType="textPersonName"
                    android:autofillHints="password" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:outlineAmbientShadowColor="@color/black"
                app:passwordToggleEnabled="true"
                app:boxBackgroundColor="#ffff">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:padding="12dp"
                    android:ems="10"
                    android:drawableStart="@drawable/baseline_lock_24"
                    android:drawablePadding="8dp"
                    android:hint="@string/password_hint"
                    android:textStyle="bold"
                    android:textColor="#2B2727"
                    android:textColorHint="@color/black"
                    android:inputType="textPassword"
                    android:autofillHints="password" />

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="@string/login_text"
                android:textSize="18sp"
                android:textStyle="bold"
                app:cornerRadius="20dp"
                android:textColor="#ffffff" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>
