<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".StudentRegistration">

    <include
        android:id="@+id/ftoolbar"
        layout="@layout/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="8dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="Student Registration"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="28sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_gravity="center"
        android:background="@drawable/background1"
        android:orientation="vertical">

        <EditText
            android:id="@+id/RegdNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/inputs"
            android:ems="10"
            android:hint="Enter Registration No."
            android:textColorHint="@color/black"
            android:inputType="textPersonName"
            android:textColor="#2B2727" />

        <EditText
            android:id="@+id/username"
            android:textColor="#2B2727"
            android:background="@drawable/inputs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:hint="@string/username_hint"
            android:textColorHint="@color/black"
            android:inputType="textPersonName" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="8dp"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/password"
                android:textColor="#2B2727"
                android:background="@drawable/inputs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password_hint"
                android:textColorHint="@color/black"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>
        <Spinner
            android:id="@+id/Classes"
            android:background="@drawable/spinner_border"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="8dp" />

        <Spinner
            android:id="@+id/Semesters"
            android:background="@drawable/spinner_border"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="2">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/Add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:textAllCaps="false"
                android:layout_weight="1"
                android:text="@string/add"
                android:textStyle="bold"
                android:textSize="18sp"
                android:background="@drawable/button1"
                android:textColor="#ffff" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/Remove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:text="@string/remove"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="#fff"
                android:background="@drawable/button1" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>


