<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".SubjectRegistration">

    <include
        android:id="@+id/ftoolbar"
        layout="@layout/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="8dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="Subject Registration"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="28sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/background1"
        android:orientation="vertical">

        <EditText
            android:id="@+id/ClassName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/inputs"
            android:ems="10"
            android:hint="Enter Class Name"
            android:inputType="textPersonName"
            android:textColor="#2B2727"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/SemesterName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/inputs"
            android:ems="10"
            android:hint="Enter Semster"
            android:inputType="textPersonName"
            android:textColor="#2B2727"
            android:textColorHint="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/SubjectId1"
                android:layout_width="167dp"
                android:layout_height="48dp"
                android:layout_margin="10dp"
                android:background="@drawable/inputs"
                android:ems="10"
                android:hint="@string/Subject_Id"
                android:inputType="textVisiblePassword"
                android:textColor="#2B2727"
                android:textColorHint="@color/black" />

            <EditText
                android:id="@+id/SubjectName1"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_margin="10dp"
                android:background="@drawable/inputs"
                android:ems="10"
                android:hint="@string/Subject_name"
                android:inputType="textPersonName"
                android:textColor="#2B2727"
                android:textColorHint="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/SubjectId2"
                android:layout_width="167dp"
                android:layout_height="48dp"
                android:layout_margin="10dp"
                android:background="@drawable/inputs"
                android:ems="10"
                android:hint="@string/Subject_Id"
                android:inputType="textVisiblePassword"
                android:textColor="#2B2727"
                android:textColorHint="@color/black" />

            <EditText
                android:id="@+id/SubjectName2"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_margin="10dp"
                android:background="@drawable/inputs"
                android:ems="10"
                android:hint="@string/Subject_name"
                android:inputType="textPersonName"
                android:textColor="#2B2727"
                android:textColorHint="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/SubjectId3"
                android:layout_width="167dp"
                android:layout_height="48dp"
                android:layout_margin="10dp"
                android:background="@drawable/inputs"
                android:ems="10"
                android:hint="@string/Subject_Id"
                android:inputType="textVisiblePassword"
                android:textColor="#2B2727"
                android:textColorHint="@color/black" />

            <EditText
                android:id="@+id/SubjectName3"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_margin="10dp"
                android:background="@drawable/inputs"
                android:ems="10"
                android:hint="@string/Subject_name"
                android:inputType="textPersonName"
                android:textColor="#2B2727"
                android:textColorHint="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/SubjectId4"
                android:layout_width="167dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/inputs"
                android:ems="10"
                android:hint="@string/Subject_Id"
                android:inputType="textVisiblePassword"
                android:textColor="#2B2727"
                android:textColorHint="@color/black" />

            <EditText
                android:id="@+id/SubjectName4"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_margin="10dp"
                android:background="@drawable/inputs"
                android:ems="10"
                android:hint="@string/Subject_name"
                android:inputType="textPersonName"
                android:textColor="#2B2727"
                android:textColorHint="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/SubjectId5"
                android:layout_width="167dp"
                android:layout_height="48dp"
                android:layout_margin="10dp"
                android:background="@drawable/inputs"
                android:ems="10"
                android:hint="@string/Subject_Id"
                android:inputType="textVisiblePassword"
                android:textColor="#2B2727"
                android:textColorHint="@color/black" />

            <EditText
                android:id="@+id/SubjectName5"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_margin="10dp"
                android:background="@drawable/inputs"
                android:ems="10"
                android:hint="@string/Subject_name"
                android:inputType="textPersonName"
                android:textColor="#2B2727"
                android:textColorHint="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/Add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@drawable/button1"
                android:text="@string/add"
                android:textAllCaps="false"
                android:textColor="#ffff"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/Remove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@drawable/button1"
                android:text="@string/remove"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>


